-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
If we do parallel dio when we are not lockless, we release the OSC and LDLM locks early, leading to the following LBUG:
00000008:00020000:3.0:1625183932.837186:0:2823:0:(osc_object.c:419:osc_req_attr_set()) page@00000000e4e028d1[2 000000001b7edf2c 3 2 000000001ecefbe3]
00000008:00020000:3.0:1625183932.839117:0:2823:0:(osc_object.c:419:osc_req_attr_set()) vvp-page@000000000f84e320(0:0) vm@00000000ea4c0139 17ffffc004006c 2:1 0 23127069812 lru
00000008:00020000:3.0:1625183932.840866:0:2823:0:(osc_object.c:419:osc_req_attr_set()) lov-page@00000000b307a48c
00000008:00020000:3.0:1625183932.842047:0:2823:0:(osc_object.c:419:osc_req_attr_set()) osc-page@000000009712b563 152: 1< 0x845fed 258 + + > 2< 622592 0 4096 0x7 0x1aa | 000000001ecefbe3 000000006f42d6bb 000000008b4c789d > 3< 1 5 0 > 4< 2 1 8 283635712 - | - - + - > 5< - - + - | 0 - | 9 - ->
00000008:00020000:3.0:1625183932.844433:0:2823:0:(osc_object.c:419:osc_req_attr_set()) end page@00000000e4e028d1
00000008:00020000:3.0:1625183932.845629:0:2823:0:(osc_object.c:419:osc_req_attr_set()) uncovered page!